# rust_auth_server

./: Cargo.toml
src/: error.rs  main.rs
